--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Vinod Kumar",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^9.6.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "http-status-codes": "^2.3.0",
