--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "http-status-codes": "^2.3.0",
     "mysql2": "^3.12.0",
     "sequelize": "^6.37.5",
+    "twilio": "^5.5.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
